--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       </div>
     </section>
 
-    <!-- <section id="section-wrapper">
+    <section id="section-wrapper">
       <h1 class="fw-bold text-center mt-5 pt-5">CONTACT US</h1>
       <div class="box-wrapper mt-5">
         <div class="info-wrap">
@@ -188,7 +188,7 @@
             </li>
           </ul>
         </div>
-        <div class="form-wrap">
+        <!-- <div class="form-wrap">
           <form action="#" method="POST">
             <h2 class="form-title">Send us a message</h2>
             <div class="form-fields">
@@ -210,9 +210,9 @@
             </div>
             <input type="submit" value="Send Message" class="submit-button" />
           </form>
-        </div>
+        </div> -->
       </div>
-    </section> -->
+    </section>
 
     <footer class="footer">Create By 5LEARN</footer>
 
